# chip8

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
cmake/: clang_format.cmake  clang_tidy.cmake  fetchFmt.cmake  fetchGoogletest.cmake  fetchRaylib.cmake  setup.cmake
src/: CMakeLists.txt  bit.h  chip8.cpp  chip8.h  cli.cpp  cli.h  common.h  common.hpp  cpu.cpp  cpu.hpp  helpers.h  instructions.h  keyboard.cpp  keyboard.h  main.cpp  parser.cpp  parser.h  screen.cpp  screen.h  stack.h  timer.h
tests/: CMakeLists.txt  fixture.h  memoryapi.cpp  opcode.cpp  parser.cpp  register_api.cpp  registerapi.cpp  stack.cpp
